--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-resource": "~1.2.0",
     "angular-cookies": "~1.2.0",
     "angular-sanitize": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "swiftclick": "~1.0.1",
+    "shake.js": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
