--- a/bower.json
+++ b/bower.json
@@ -5,17 +5,20 @@
     "angular": "~1.2.0",
     "json3": "~3.2.4",
     "jquery": "~1.10.0",
-    "sass-bootstrap": "~3.0.0",
     "es5-shim": "~2.1.0",
-    "angular-resource": "~1.2.0",
-    "angular-cookies": "~1.2.0",
-    "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
     "swiftclick": "~1.0.1",
-    "shake.js": "~1.1.0"
+    "shake.js": "~1.1.0",
+    "ionicons": "~1.4.1",
+    "angular-rn-carousel": "~0.1.4",
+    "angular-touch": "~1.2.7",
+    "angular-animate": "~1.2.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
     "angular-scenario": "~1.2.0"
+  },
+  "resolutions": {
+    "angular": "1.2.7"
   }
 }
