Fix category for meal

--- a/app/scripts/constants.js.dist
+++ b/app/scripts/constants.js.dist
@@ -14,7 +14,7 @@ angular.module('lunchButtonApp')
     },
     CATEGORIES: {
       value: Object.create(null, {
-        Food: {
+        meal: {
           value: '4d4b7105d754a06374d81259'
         }
       })
