--- a/app/scripts/constants.js.dist
+++ b/app/scripts/constants.js.dist
@@ -18,6 +18,9 @@ angular.module('lunchButtonApp')
           value: '4d4b7105d754a06374d81259'
         }
       })
+    },
+    EXCLUDED_CATEGORIES: {
+      value: ['4bf58dd8d48988d1e0931735', '4bf58dd8d48988d16d941735']
     }
   }))
   .constant('MAX_DISTANCE', 25000);
