LB-35 Added venues links and improved sharing

--- a/platforms/ios/Mealshaker/Mealshaker-Info.plist
+++ b/platforms/ios/Mealshaker/Mealshaker-Info.plist
@@ -77,6 +77,10 @@
     <string>Mealshaker</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
+    <key>NSLocationUsageDescription</key>
+    <string>Fetch places around you</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Find great places to eat and drink</string>
     <key>NSMainNibFile~ipad</key>
     <string></string>
     <key>UIStatusBarHidden</key>
