--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "lunchbutton",
   "version": "0.0.0",
   "devDependencies": {
+    "cucumber": "~0.3.1",
     "grunt": "~0.4.2",
+    "grunt-angular-phonegap": "~0.1.7",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-concurrent": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
@@ -17,41 +19,41 @@
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
+    "grunt-cordovacli": "~0.3.4",
+    "grunt-cucumber": "~0.2.1",
+    "grunt-env": "~0.4.0",
+    "grunt-ftp-deploy": "^0.1.7",
     "grunt-google-cdn": "~0.2.0",
+    "grunt-karma": "~0.6.2",
     "grunt-ngmin": "~0.0.2",
     "grunt-rev": "~0.1.0",
+    "grunt-shell": "~0.5.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.0",
-    "karma-ng-scenario": "~0.1.0",
-    "grunt-karma": "~0.6.2",
-    "karma-script-launcher": "~0.1.0",
+    "karma": "~0.10.9",
     "karma-chrome-launcher": "~0.1.2",
+    "karma-coffee-preprocessor": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-jasmine": "~0.1.5",
-    "karma-coffee-preprocessor": "~0.1.2",
-    "requirejs": "~2.1.9",
-    "karma-requirejs": "~0.2.1",
-    "karma-phantomjs-launcher": "~0.1.1",
-    "karma": "~0.10.9",
     "karma-ng-html2js-preprocessor": "~0.1.0",
-    "cucumber": "~0.3.1",
+    "karma-ng-scenario": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.1",
+    "karma-requirejs": "~0.2.1",
+    "karma-script-launcher": "~0.1.0",
+    "load-grunt-tasks": "~0.2.0",
     "protractor": "git+https://github.com/angular/protractor.git",
-    "grunt-cucumber": "~0.2.1",
+    "requirejs": "~2.1.9",
     "selenium-webdriver": "~2.34.0",
-    "grunt-env": "~0.4.0",
-    "grunt-shell": "~0.5.0",
-    "grunt-cordovacli": "~0.3.4",
-    "grunt-angular-phonegap": "~0.1.7"
+    "time-grunt": "~0.2.0"
   },
   "engines": {
     "node": ">=0.8.0"
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "./node_modules/protractor/bin/webdriver-manager update"
+    "postinstall": "./node_modules/protractor/bin/webdriver-manager update",
+    "build": "grunt phonegap:build && cp cordova-config.xml www/config.xml && cordova build ios"
   }
 }
