--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "shake.js": "~1.1.0",
     "angular-touch": "~1.2.20",
     "angular-animate": "~1.2.20",
-    "ta-angularjs-slider": "~0.1.5"
+    "ta-angularjs-slider": "~0.1.5",
+    "jquery": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.20",
