--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,19 @@
   "name": "lunch-button",
   "version": "1.0.0",
   "dependencies": {
-    "angular": "~1.2.20",
-    "angular-route": "~1.2.20",
+    "angular": "~1.2.26",
+    "angular-route": "~1.2.26",
     "swiftclick": "~1.0.1",
     "shake.js": "~1.1.0",
-    "angular-touch": "~1.2.20",
-    "angular-animate": "~1.2.20",
+    "angular-touch": "~1.2.26",
+    "angular-animate": "~1.2.26",
     "ta-angularjs-slider": "~0.1.5",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "ngStorage": "~0.1.8",
+    "angular-cookies": "~1.2.26"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.20",
-    "angular-scenario": "~1.2.20"
+    "angular-mocks": "~1.2.26",
+    "angular-scenario": "~1.2.26"
   }
 }
